--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
         "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
     },
     "dependencies": {
+        "axios": "^0.19.2",
         "body-parser": "^1.19.0",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "mariadb": "^2.2.0",
+        "multer": "^1.4.2",
+        "mysql": "^2.18.1"
     },
     "devDependencies": {
         "concurrently": "5.1.0"
